added routing system to frontend

--- a/frontend/views/register.html
+++ b/frontend/views/register.html
@@ -1,3 +1,8 @@
-<h1>login</h1>
-
-<p>create register form here</p>
+<div>
+    <div class="form-box">
+        <div class="form-header">
+            <h2>Register</h2>
+        </div>
+        <p>You put the form here</p>
+    </div>
+</div>
