--- a/frontend/css/index.css
+++ b/frontend/css/index.css
@@ -1,3 +1,12 @@
-h1 {
-    color: red;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+* {
+    font-family: 'Roboto', sans-serif !important;
+}
+
+body {
+    background-color: #616a7a;
+}
+
+.hover:hover {
+    cursor: pointer;
 }
